tests/sumo/pedestrian_model/striping/errors/disconnected_trip_ignore/errors.sumo
Warning: No connection between edge 'SC' and edge 'CW' found.
Warning: No connection between edge ':C_w1-1.00' and edge 'CW_arrival_connector' found.
Warning: Person 'p0' could not find route across junction 'C' from walkingArea ':C_w1' to edge 'CW', time=8.00.
